--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <body>
 
     <div id="app">
-
+        <h1>Emails:</h1>
+        <ul>
+            <li v-for="email in emails">{{email}}</li>
+        </ul>
     </div>
     <!-- /#app -->
     
