--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="app">
         <h1>Emails:</h1>
         <ul>
-            <li v-for="email in emails">{{email}}</li>
+            <li v-if="emails.length === 10" v-for="email in emails">{{email}}</li>
         </ul>
     </div>
     <!-- /#app -->
